2005-05-02  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* fink.8.in, fink.conf.5.in: added documentation for 'fink plugins'

2005-04-28  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* lockwait.in: Use any dpkg/apt-get in the path
	* fink.info.in: Don't remove the finkinfodb dir, just touch a file to tell
	Fink to invalidate the current DB dir.

2005-04-27  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* lockwait.in, .cvsignore, setup.sh, install.sh: Install -lockwait
	versions of dpkg and apt-get.

2005-04-27  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.24.5, a release
	on branch_0_24 which is ready for 10.4

2005-04-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* fink.conf.5.in: Document AutoScanpackages, minor fixes.

2005-04-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* fink.info.in: Remove new index at uninstall

2005-04-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* path-prefix-g++-3.3 path-prefix-g++-4.0: remove obsolete directories
	* install.sh: Stop installing path-prefix dirs

2005-04-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* path-prefix-g++-3.3 path-prefix-g++-4.0, install.sh: use two 
	possible path prefixes, path-prefix-g++-3.3 and path-prefix-g++-4.0, 
	depending on the current Distribution
	* path-prefix: empty out this (obsolete) directory

2005-04-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* fink.info.in: Remove new index in PreRm

2005-04-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* fink.info.in: Remove old index

2005-04-22  Daniel Macks  <dmacks@netspace.org>

	* fink.info.in: Don't use path-prefix when building fink
	itself (avoids catch-22 if user has broken installation)

2005-04-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* path-prefix: New dir, containing executables that fink wishes to
	put in the front of the path while building. For now that's just g++
	* install.sh: Install the new path-prefix dir and symlink
